FEAT: Added refresh handler
